set visibility: public on devcontainer image

--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -34,3 +34,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ghcr.io/swenstone/devcontainer:latest
+          visibility: public
