--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -1,6 +1,6 @@
 name: "devcontainer"
 
-on: 
+on:
   push:
 
 env:
@@ -15,6 +15,17 @@ jobs:
       packages: write
 
     steps:
+      - name: extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=sha
+
       - name: setup qemu
         uses: docker/setup-qemu-action@v3
 
@@ -33,5 +44,5 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ghcr.io/swenstone/devcontainer:latest
-          visibility: public
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
