--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -25,6 +25,7 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
             type=sha
+            type=raw,value=latest,enable={{is_default_branch}}
 
       - name: setup qemu
         uses: docker/setup-qemu-action@v3
