--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -24,8 +24,11 @@ jobs:
           tags: |
             type=ref,event=branch
             type=ref,event=pr
-            type=sha
+            type=sha,format=long
             type=raw,value=latest,enable={{is_default_branch}}
+
+      - name: install goss
+        uses: e1himself/goss-installation-action@v1
 
       - name: setup qemu
         uses: docker/setup-qemu-action@v3
@@ -39,6 +42,18 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: build and export container
+        uses: docker/build-push-action@v6
+        with:
+          cache-from: type=gha
+          cache-to: type=gha
+          load: true
+          tags: ${{ steps.meta.outputs.tags }}
+
+      - name: test container with goss
+        run: |
+          dgoss run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:{{ branch }}
 
       - name: build and push container
         uses: docker/build-push-action@v6
