use GOSS_FILES_STRATEGY=cp for dgoss testing

--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -52,6 +52,8 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
 
       - name: test container with goss
+        env:
+          GOSS_FILES_STRATEGY: cp
         run: |
           dgoss run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
 
