--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -6,6 +6,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  TEST_IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}-test
 
 jobs:
   build-and-push-devcontainer:
@@ -49,13 +50,11 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha
           load: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ env.TEST_IMAGE }}
 
       - name: test container with goss
-        env:
-          GOSS_FILES_STRATEGY: cp
         run: |
-          dgoss run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
+          GOSS_FILES_STRATEGY=cp dgoss run --rm ${{ env.TEST_IMAGE }}
 
       - name: build and push container
         uses: docker/build-push-action@v6
