refactory TEST_IMAGE env var

--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -6,6 +6,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  TEST_IMAGE: ghcr.io/${{ github.repository }}:sha-${{ github.sha }}
 
 jobs:
   build-and-push-devcontainer:
@@ -47,18 +48,14 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: build and export container
-        env:
-          TEST_IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}-test
         uses: docker/build-push-action@v6
         with:
           cache-from: type=gha
           cache-to: type=gha
           load: true
-          tags: ${{ env.TEST_IMAGE }}
+          tags: ${{ steps.meta.outputs.tags }}
 
       - name: test container with goss
-        env:
-          TEST_IMAGE: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}-test
         run: |
           dgoss run --rm ${{ env.TEST_IMAGE }}
 
