try to make labels, platforms and tags match between build steps so caching is more effective

--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -52,7 +52,9 @@ jobs:
         with:
           cache-from: type=gha
           cache-to: type=gha
+          labels: ${{ steps.meta.outputs.labels }}
           load: true
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
 
       - name: test container with goss
