--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -54,7 +54,7 @@ jobs:
           cache-to: type=gha
           labels: ${{ steps.meta.outputs.labels }}
           load: true
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           tags: ${{ steps.meta.outputs.tags }}
 
       - name: test container with goss
