--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -6,7 +6,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  TEST_IMAGE: ghcr.io/${{ github.repository }}:sha-${{ github.sha }}
+  TEST_IMAGE: ghcr.io/${{ github.repository }}:test-${{ github.sha }}
 
 jobs:
   build-and-push-devcontainer:
@@ -55,7 +55,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           load: true
           platforms: linux/amd64
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ env.TEST_IMAGE }}
 
       - name: test container with goss
         run: |
