dont push test container to registry, just load into docker

--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -47,14 +47,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: build and push test container
+      - name: build and load test container
         uses: docker/build-push-action@v6
         with:
           cache-from: type=gha
-          labels: ${{ steps.meta.outputs.labels }}
           load: true
           platforms: linux/amd64
-          push: true
           tags: ${{ env.TEST_IMAGE }}
 
       - name: test container with goss
