--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -1,16 +1,19 @@
-name: "devcontainer"
+name: images
 
 on:
   push:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-  TEST_IMAGE: ghcr.io/${{ github.repository }}:test-${{ github.sha }}
+  TEST_IMAGE_TAG: test-${{ github.sha }}
 
 jobs:
   build-and-push-devcontainer:
     runs-on: ubuntu-latest
+
+    env:
+      IMAGE_NAME: ${{ github.repository_owner }}/devcontainer
+      TEST_IMAGE: ghcr.io/${{ github.repository_owner }}/devcontainer:${{ env.TEST_IMAGE_TAG }}
 
     permissions:
       packages: write
