--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -3,18 +3,13 @@ name: images
 on:
   push:
 
-env:
-  REGISTRY: ghcr.io
-  TEST_IMAGE_TAG: test-${{ github.sha }}
-
 jobs:
   devcontainer:
     runs-on: ubuntu-latest
 
     env:
-      IMAGE_NAME: ${{ github.repository_owner }}/devcontainer
-      IMAGE_URL: ${{ env.REGISTRY }}/${{ github.repository_owner }}/devcontainer
-      TEST_IMAGE_URL: ${{ env.REGISTRY }}/${{ github.repository_owner }}/devcontainer:${{ env.TEST_IMAGE_TAG }}
+      IMAGE_URL: ghcr.io/${{ github.repository_owner }}/devcontainer
+      TEST_IMAGE_URL: ghcr.io/${{ github.repository_owner }}/devcontainer:test-${{ github.sha }}
 
     permissions:
       packages: write
@@ -35,7 +30,7 @@ jobs:
       - name: docker login
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ${{ jobs.devcontainer.env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -44,11 +39,11 @@ jobs:
         with:
           cache-from: type=gha
           push: true
-          tags: ${{ env.TEST_IMAGE_URL }}
+          tags: ${{ jobs.devcontainer.env.TEST_IMAGE_URL }}
 
       - name: test container with goss
         run: |
-          dgoss run --rm ${{ env.TEST_IMAGE_URL }}
+          dgoss run --rm ${{ jobs.devcontainer.env.TEST_IMAGE_URL }}
 
       - name: extract metadata
         id: meta
