--- a/.github/workflows/images.yml
+++ b/.github/workflows/images.yml
@@ -11,7 +11,6 @@ jobs:
       REGISTRY: ghcr.io
       IMAGE_URL: ghcr.io/${{ github.repository_owner }}/devcontainer
       TEST_IMAGE_URL: ghcr.io/${{ github.repository_owner }}/devcontainer:test-${{ github.sha }}
-      BUILDCACHE_IMAGE_URL: ghcr.io/${{ github.repository_owner }}/devcontainer:buildcache-${{ github.sha }}
 
     permissions:
       packages: write
@@ -39,8 +38,7 @@ jobs:
       - name: build and load test container
         uses: docker/build-push-action@v6
         with:
-          #cache-from: type=gha
-          cache-from: type=registry,ref=${{ env.BUILDCACHE_IMAGE_URL }}
+          cache-from: type=gha,scope=devcontainer
           context: devcontainer/
           push: true
           tags: ${{ env.TEST_IMAGE_URL }}
@@ -66,10 +64,8 @@ jobs:
       - name: build and push container
         uses: docker/build-push-action@v6
         with:
-          # cache-from: type=gha
-          # cache-to: type=gha
-          cache-from: type=registry,ref=${{ env.BUILDCACHE_IMAGE_URL }}
-          cache-to: type=registry,ref=${{ env.BUILDCACHE_IMAGE_URL }},mode=max
+          cache-from: type=gha,scope=devcontainer
+          cache-to: type=gha,scope=devcontainer,mode=max
           context: devcontainer/
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64,linux/arm64
@@ -83,7 +79,6 @@ jobs:
       REGISTRY: ghcr.io
       IMAGE_URL: ghcr.io/${{ github.repository_owner }}/buildcontainer
       TEST_IMAGE_URL: ghcr.io/${{ github.repository_owner }}/buildcontainer:test-${{ github.sha }}
-      BUILDCACHE_IMAGE_URL: ghcr.io/${{ github.repository_owner }}/buildcontainer:buildcache-${{ github.sha }}
 
     permissions:
       packages: write
@@ -111,8 +106,7 @@ jobs:
       - name: build and load test container
         uses: docker/build-push-action@v6
         with:
-          # cache-from: type=gha
-          cache-from: type=registry,ref=${{ env.BUILDCACHE_IMAGE_URL }}
+          cache-from: type=gha,scope=buildcontainer
           context: buildcontainer/
           push: true
           tags: ${{ env.TEST_IMAGE_URL }}
@@ -138,10 +132,8 @@ jobs:
       - name: build and push container
         uses: docker/build-push-action@v6
         with:
-          # cache-from: type=gha
-          # cache-to: type=gha
-          cache-from: type=registry,ref=${{ env.BUILDCACHE_IMAGE_URL }}
-          cache-to: type=registry,ref=${{ env.BUILDCACHE_IMAGE_URL }},mode=max
+          cache-from: type=gha,scope=buildcontainer
+          cache-to: type=gha,scope=buildcontainer,mode=max
           context: buildcontainer/
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64,linux/arm64
