--- a/devcontainer/goss.yaml
+++ b/devcontainer/goss.yaml
@@ -2,12 +2,24 @@ command:
   # test our env vars are set
   'env | grep PYTHONUNBUFFERED':
     exit-status: 0
-    stdout: 
+    stdout:
       - /^PYTHONUNBUFFERED=1$/
-
+  'env | grep VOLTA_HOME':
+    exit-status: 0
+    stdout:
+      - /^VOLTA_HOME="\/home\/vscode\/.volta"$/
+  'env | grep VOLTA_FEATURE_PNPM':
+    exit-status: 0
+    stdout:
+      - /^VOLTA_FEATURE_PNPM=1$/
+  'echo $PATH':
+    exit-status: 0
+    stdout:
+      - /\/home\/vscode\/.local\/bin/
+      - /\/home\/vscode\/.volta\/bin/
 
   # test that the version of python we want is installed with uv
-  'uv python find 3.12':
+  "uv python find 3.12":
     exit-status: 0
 
 file:
