--- a/buildcontainer/goss.yaml
+++ b/buildcontainer/goss.yaml
@@ -7,7 +7,7 @@ command:
   "env | grep VOLTA_HOME":
     exit-status: 0
     stdout:
-      - /^VOLTA_HOME="\/home\/swenstone\/.volta"$/
+      - /^VOLTA_HOME=\/home\/swenstone\/.volta$/
   "env | grep VOLTA_FEATURE_PNPM":
     exit-status: 0
     stdout:
